modified:   mopidy/Dockerfile

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -3,23 +3,26 @@ FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-# Install dependencies using Alpine's apk
+# Install dependencies using Alpine's apk with correct package names
 RUN apk add --no-cache \
     python3 \
     py3-pip \
     py3-setuptools \
     gstreamer \
-    gst-plugins-base \
-    gst-plugins-good \
-    gst-plugins-bad \
-    gst-plugins-ugly \
-    gst-plugins-pulseaudio \
-    gst-libav \
-    gst-tools \
+    gstreamer-plugins-base \
+    gstreamer-plugins-good \
+    gstreamer-plugins-bad \
+    gstreamer-plugins-ugly \
+    gstreamer-pulseaudio \
+    gstreamer-libav \
+    gstreamer-tools \
     curl
 
 # Install Mopidy and core extensions using pip
 RUN pip3 install mopidy mopidy-spotify mopidy-tidal mopidy-local
+
+# Create Mopidy configuration directory
+RUN mkdir -p /etc/mopidy
 
 # Copy run script
 COPY run.sh /run.sh
