--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -3,15 +3,11 @@ FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-# Install core dependencies using Alpine apk
+# Install Python, Pip, and build tools using Alpine apk
 RUN apk add --no-cache \
     python3 \
     py3-pip \
     py3-setuptools \
-    curl \
-    gstreamer \
-    gst-plugins-base \
-    gst-plugins-good \
     build-base \
     gcc \
     g++ \
@@ -19,17 +15,14 @@ RUN apk add --no-cache \
     pkgconfig \
     python3-dev \
     libffi-dev \
-    libcurl \
-    openssl-dev
+    openssl-dev \
+    curl \
+    gstreamer \
+    gst-plugins-base \
+    gst-plugins-good
 
-# Reinstall pip directly using the apk package manager to avoid issues
-RUN apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/latest-stable/community py3-pip
-
-# Make sure pip is available and upgrade if necessary
-RUN python3 -m ensurepip --upgrade && \
-    pip3 install --no-cache --upgrade pip
-
-# Install Mopidy and its extensions using pip
+# Skip upgrading pip, use the system-provided version
+# Install Mopidy and its extensions using pip3
 RUN pip3 install mopidy mopidy-spotify mopidy-tidal mopidy-local
 
 # Copy run script
