modified:   mopidy/Dockerfile

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -3,7 +3,7 @@ FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-# Install Python, Pip, and build tools using Alpine apk
+# Install core dependencies using Alpine apk
 RUN apk add --no-cache \
     python3 \
     py3-pip \
@@ -17,13 +17,18 @@ RUN apk add --no-cache \
     libffi-dev \
     openssl-dev \
     curl \
+    libcurl \
+    glib \
+    glib-dev \
     gstreamer \
     gst-plugins-base \
-    gst-plugins-good
+    gst-plugins-good \
+    gst-libav \
+    libcurl-dev
 
 # Skip upgrading pip, use the system-provided version
-# Install Mopidy and its extensions using pip3
-RUN pip3 install mopidy mopidy-spotify mopidy-tidal mopidy-local
+# Install Mopidy and its extensions using pip3 with verbose logging
+RUN pip3 install --verbose mopidy mopidy-spotify mopidy-tidal mopidy-local
 
 # Copy run script
 COPY run.sh /run.sh
