--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -3,7 +3,7 @@ FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
-# Install core dependencies using Alpine apk
+# Install core dependencies and GStreamer plugins
 RUN apk add --no-cache \
     python3 \
     py3-pip \
@@ -23,21 +23,18 @@ RUN apk add --no-cache \
     gstreamer \
     gst-plugins-base \
     gst-plugins-good \
-    gst-libav
+    gst-libav \
+    gstreamer1.0-plugins-bad \
+    gstreamer1.0-plugins-ugly \
+    gstreamer1.0-pulseaudio \
+    gstreamer1.0-tools
 
-# Download and install libspotify from a valid source
-RUN curl -L -o libspotify.tar.gz https://github.com/mopidy/libspotify-deb/releases/download/v12.1.51/libspotify_12.1.51.orig-amd64.tar.gz && \
-    tar xzf libspotify.tar.gz && \
-    mv libspotify-12.1.51 /usr/local/libspotify && \
-    ln -s /usr/local/libspotify/lib/libspotify.so /usr/lib/libspotify.so && \
-    ln -s /usr/local/libspotify/include/libspotify /usr/include/libspotify && \
-    rm libspotify.tar.gz
+# Install Mopidy and Spotify extension
+RUN python3 -m pip install mopidy mopidy-spotify
 
-# Create a virtual environment for Mopidy
-RUN python3 -m venv /opt/mopidy
-
-# Activate the virtual environment and install Mopidy and its extensions
-RUN /opt/mopidy/bin/pip install --no-cache-dir mopidy mopidy-spotify mopidy-tidal mopidy-local
+# Install GStreamer spotify plugin for audio playback
+RUN git clone https://github.com/mopidy/mopidy-spotify && cd mopidy-spotify && \
+    make && make install
 
 # Copy run script
 COPY run.sh /run.sh
@@ -46,5 +43,5 @@ RUN chmod a+x /run.sh
 # Expose Mopidy port
 EXPOSE 6680
 
-# Use the virtual environment to run Mopidy
+# Run Mopidy
 CMD ["/opt/mopidy/bin/mopidy", "--config", "/etc/mopidy/mopidy.conf"]
