--- a/mopidy/config.yaml
+++ b/mopidy/config.yaml
@@ -1,20 +1,18 @@
 name: Mopidy
-version: "1.0"
+version: "1.0.0"
 slug: mopidy
-description: "Mopidy server for Home Assistant"
+description: A music server that plays music from local storage, network resources, and the internet.
 arch:
   - armv7
+  - armhf
   - aarch64
   - amd64
   - i386
-startup: application
-boot: auto
-host_network: true
+startup: "services"
+init: false
 ports:
   6680/tcp: 6680
-options:
-  spotify_username: ""
-  spotify_password: ""
-schema:
-  spotify_username: str
-  spotify_password: str
+map:
+  - config
+options: {}
+schema: {}
