--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -1,34 +1,28 @@
-# Use the Home Assistant base image
-ARG BUILD_FROM
+ARG BUILD_FROM=ghcr.io/hassio-addons/base/ubuntu:latest
 FROM $BUILD_FROM
 
-# Install Mopidy and its dependencies from Alpine's edge repository
-RUN apk add --no-cache \
+# Setup environment
+ENV LANG C.UTF-8
+
+# Install dependencies and Mopidy
+RUN apt-get update && apt-get install -y \
     mopidy \
-    gst-plugins-base \
-    gst-plugins-good \
-    gst-plugins-bad \
-    gst-plugins-ugly \
-    gst-libav \
-    py3-dbus \
-    py3-gst \
-    py3-libxml2 \
-    py3-pykka \
-    py3-requests \
-    py3-setuptools \
-    py3-tornado \
-    pulseaudio \
-    bash
+    mopidy-spotify \
+    gstreamer1.0-plugins-base \
+    gstreamer1.0-plugins-good \
+    gstreamer1.0-plugins-bad \
+    gstreamer1.0-plugins-ugly \
+    python3-pip \
+    && pip3 install Mopidy-Iris \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Set up Mopidy configuration directory
-RUN mkdir -p /var/lib/mopidy/.config/mopidy
+# Copy run script
+COPY run.sh /run.sh
+RUN chmod a+x /run.sh
 
-# Copy the run script to manage the service
-COPY run.sh /etc/services.d/mopidy/run
-RUN chmod +x /etc/services.d/mopidy/run
-
-# Expose the Mopidy web port
+# Expose Mopidy port (not needed for ingress but kept for manual testing)
 EXPOSE 6680
 
-# Use s6-overlay to manage services
-ENTRYPOINT [ "/init" ]
+# Start Mopidy on container start
+CMD [ "/run.sh" ]
