modified:   mopidy/Dockerfile 	modified:   mopidy/config.yaml 	modified:   mopidy/run.sh

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -1,28 +1,34 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base/ubuntu:latest
+# Use the Home Assistant base image
+ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Setup environment
-ENV LANG C.UTF-8
-
-# Install dependencies and Mopidy
-RUN apt-get update && apt-get install -y \
+# Install Mopidy and its dependencies from Alpine
+RUN apk add --no-cache \
     mopidy \
-    mopidy-spotify \
-    gstreamer1.0-plugins-base \
-    gstreamer1.0-plugins-good \
-    gstreamer1.0-plugins-bad \
-    gstreamer1.0-plugins-ugly \
-    python3-pip \
-    && pip3 install Mopidy-Iris \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    gst-plugins-base \
+    gst-plugins-good \
+    gst-plugins-bad \
+    gst-plugins-ugly \
+    gst-libav \
+    py3-dbus \
+    py3-gst \
+    py3-libxml2 \
+    py3-pykka \
+    py3-requests \
+    py3-setuptools \
+    py3-tornado \
+    pulseaudio \
+    bash
 
-# Copy run script
-COPY run.sh /run.sh
-RUN chmod a+x /run.sh
+# Set up Mopidy configuration directory
+RUN mkdir -p /var/lib/mopidy/.config/mopidy
 
-# Expose Mopidy port (not needed for ingress but kept for manual testing)
-EXPOSE 6680
+# Copy the run script to manage the service
+COPY run.sh /etc/services.d/mopidy/run
+RUN chmod +x /etc/services.d/mopidy/run
 
-# Start Mopidy on container start
-CMD [ "/run.sh" ]
+# Expose Mopidy web interface port for ingress (8099)
+EXPOSE 8099
+
+# Use s6-overlay to manage services
+ENTRYPOINT [ "/init" ]
