modified:   mopidy/Dockerfile 	modified:   mopidy/run.sh

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -1,12 +1,13 @@
-# Use the Home Assistant base image
+# Base image for Home Assistant Add-ons
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Install Mopidy and dependencies
+# Install necessary packages for Mopidy
 RUN apk add --no-cache \
     mopidy \
     gst-plugins-base \
     gst-plugins-good \
+    gst-plugins-bad \
     gst-plugins-ugly \
     py3-dbus \
     py3-gst \
@@ -18,15 +19,15 @@ RUN apk add --no-cache \
     pulseaudio \
     bash
 
-# Set up Mopidy config and data directories
+# Set up directories for Mopidy
 RUN mkdir -p /var/lib/mopidy/.config/mopidy /var/lib/mopidy/.local/share/mopidy
 
-# Expose Mopidy port for external access (if needed)
-EXPOSE 6680
-
-# Copy the service script to manage Mopidy via s6-overlay
+# Copy the service run script
 COPY run.sh /etc/services.d/mopidy/run
 RUN chmod +x /etc/services.d/mopidy/run
 
-# Use s6-overlay for process management
+# Expose the Mopidy HTTP port (default: 6680)
+EXPOSE 6680
+
+# Entry point for s6-overlay
 ENTRYPOINT [ "/init" ]
