--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -36,19 +36,19 @@ schema:
   tv_dir: str
   debug: bool
   log_level:
-    type: "list"
+    type: "select"
     options:
-      - debug
-      - info
-      - warning
-      - error
+      - "debug"
+      - "info"
+      - "warning"
+      - "error"
   notify_on_success: bool
   notify_on_failure: bool
   notify_method:
-    type: "list"
+    type: "select"
     options:
-      - email
-      - webhook
+      - "email"
+      - "webhook"
   email_recipient: str
   email_sender: str
   email_server: str
