--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -1,4 +1,8 @@
 # Use the official Automatic Ripping Machine Docker image as the base
 FROM automaticrippingmachine/automatic-ripping-machine:latest
 
-# No need to copy or use the run.sh script, as the ARM Docker image includes its own entrypoint.
+# Disable syslog-ng by removing its init file
+RUN rm /etc/my_init.d/10_syslog-ng.init
+
+# Continue with the default entrypoint from the ARM image
+CMD ["/sbin/my_init"]
