--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -4,5 +4,5 @@ FROM automaticrippingmachine/automatic-ripping-machine:latest
 # Disable syslog-ng by removing its init file
 RUN rm /etc/my_init.d/10_syslog-ng.init
 
-# Continue with the default entrypoint from the ARM image
+# Set the default entrypoint to ARM's built-in process manager
 CMD ["/sbin/my_init"]
