--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -4,5 +4,9 @@ FROM automaticrippingmachine/automatic-ripping-machine:latest
 # Disable syslog-ng by removing its init file
 RUN rm /etc/my_init.d/10_syslog-ng.init
 
+# Create the missing config directory and ensure the ARM user has the correct permissions
+RUN mkdir -p /etc/arm/config && \
+    chown -R 1000:1000 /etc/arm
+
 # Set the default entrypoint to ARM's built-in process manager
 CMD ["/sbin/my_init"]
