--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -8,5 +8,8 @@ RUN rm /etc/my_init.d/10_syslog-ng.init
 RUN mkdir -p /etc/arm/config && \
     chown -R 1000:1000 /etc/arm
 
+# Run udevd in the foreground to ensure the service is available inside the container
+RUN /lib/systemd/systemd-udevd --daemon && udevadm trigger
+
 # Set the default entrypoint to ARM's built-in process manager
 CMD ["/sbin/my_init"]
