--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -8,8 +8,8 @@ RUN rm /etc/my_init.d/10_syslog-ng.init
 RUN mkdir -p /etc/arm/config && \
     chown -R 1000:1000 /etc/arm
 
-# Install a compatible version of werkzeug
-RUN pip3 install werkzeug==1.0.1
+# Install a compatible version of werkzeug, flask, and its dependencies
+RUN pip3 install werkzeug==1.0.1 flask==1.1.2 jinja2==2.11.3 itsdangerous==1.1.0
 
 # Remove the udev initialization script to prevent starting it
 RUN rm /etc/my_init.d/start_udev.sh
