--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -10,8 +10,11 @@ arch:
   - armhf
 startup: "application"
 boot: "auto"
-options: {}
-schema: {}
+ingress: true  # Enable ingress for the web UI
+
+ingress_port: 8080  # Port for the ARM web UI
+panel_icon: "mdi:disc"  # Icon to show in the sidebar
+panel_title: "ARM Web UI"  # Title for the sidebar entry
 
 # Ensure device access and privileges for hardware interaction
 privileged:
