--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -4,6 +4,9 @@ FROM automaticrippingmachine/automatic-ripping-machine:latest
 # Disable syslog-ng by removing its init file
 RUN rm /etc/my_init.d/10_syslog-ng.init
 
+# Remove the udev initialization script to prevent starting it (causes issues in Docker)
+RUN rm /etc/my_init.d/start_udev.sh
+
 # Create the missing config directory and ensure the ARM user has the correct permissions
 RUN mkdir -p /etc/arm/config && \
     chown -R 1000:1000 /etc/arm
