--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -1,18 +1,19 @@
 # Use the official Automatic Ripping Machine Docker image as the base
 FROM automaticrippingmachine/automatic-ripping-machine:latest
 
-# Disable syslog-ng by removing its init file
-RUN rm /etc/my_init.d/10_syslog-ng.init
-
-# Remove the udev initialization script to prevent starting it (causes issues in Docker)
+# Remove udev init script to prevent Docker errors
 RUN rm /etc/my_init.d/start_udev.sh
 
-# Create the missing config directory and ensure the ARM user has the correct permissions
-RUN mkdir -p /etc/arm/config && \
-    chown -R 1000:1000 /etc/arm
+# Create config directory and set correct permissions for ARM
+RUN mkdir -p /etc/arm/config && chown -R 1000:1000 /etc/arm
 
-# Install compatible versions of flask, flask_sqlalchemy, and its dependencies
+# Install compatible Flask and SQLAlchemy versions
 RUN pip3 install werkzeug==1.0.1 flask==1.1.2 jinja2==2.11.3 itsdangerous==1.1.0 markupsafe==1.1.1 flask_sqlalchemy==2.4.4 sqlalchemy==1.3.23
+
+# Install the S6 Overlay for service management
+RUN curl -L -o /tmp/s6-overlay.tar.gz https://github.com/just-containers/s6-overlay/releases/download/v2.1.0.2/s6-overlay-amd64.tar.gz \
+    && tar -xzf /tmp/s6-overlay.tar.gz -C / \
+    && rm /tmp/s6-overlay.tar.gz
 
 # Copy the run.sh startup script
 COPY run.sh /run.sh
@@ -20,5 +21,5 @@ COPY run.sh /run.sh
 # Make the startup script executable
 RUN chmod +x /run.sh
 
-# Set the entrypoint to run the script
-ENTRYPOINT ["/run.sh"]
+# Set S6 as the entrypoint
+ENTRYPOINT ["/init"]
