--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -8,7 +8,7 @@ arch:
   - amd64
   - i386
   - armhf
-startup: "services"  # Adjusted startup type to start with services
+startup: "services"
 boot: "auto"
 ingress: true  # Enable ingress for the web UI
 
