--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -1,8 +1,11 @@
 # Use the official Automatic Ripping Machine Docker image as the base
 FROM automaticrippingmachine/automatic-ripping-machine:latest
 
-# Remove udev init script to prevent Docker errors
-RUN rm /etc/my_init.d/start_udev.sh
+# Disable syslog-ng by removing its init script
+RUN rm -f /etc/my_init.d/10_syslog-ng.init
+
+# Remove syslog-ng to prevent it from starting at all
+RUN apt-get remove -y syslog-ng-core
 
 # Create config directory and set correct permissions for ARM
 RUN mkdir -p /etc/arm/config && chown -R 1000:1000 /etc/arm
